--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.28",
     "nodemon": "^2.0.4",
+    "normalize-url": "^5.1.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
